--- a/source/components/Spinner/styles.m.css
+++ b/source/components/Spinner/styles.m.css
@@ -1,3 +1,16 @@
+.spinner {
+    position: fixed;
+    width: 30px;
+    height: 30px;
+    border: 3px solid #ddd;
+    border-top: 4px solid #f25a41;
+    border-radius: 100%;
+    top: 25px;
+    right: 25px;
+    margin: auto;
+    animation: spinner 1s infinite linear;
+}
+
 @keyframes spinner {
     from {
         transform: rotate(0deg);
@@ -5,17 +18,4 @@
     to {
         transform: rotate(360deg);
     }
-}
-
-.spinner {
-    position: fixed;
-    width: 30px;
-    height: 30px;
-    border: 3px solid #ddd;
-    border-top: 4px solid var(--paletteColor10);
-    border-radius: 100%;
-    top: 25px;
-    right: 25px;
-    margin: auto;
-    animation: spinner 1s infinite linear;
 }
